crates/specforge-emitter/tests/snapshots/tests__model__render_dbml_empty.snap
---
source: crates/specforge-emitter/tests/model.rs
expression: output
---
// Generated by specforge model
// Model version: 1.0.0
