crates/specforge-emitter/tests/snapshots/tests__model__render_dbml_keys_grouped.snap
---
source: crates/specforge-emitter/tests/model.rs
expression: output
---
// Generated by specforge model
// Model version: 1.0.0

// ── @specforge/software ──

TableGroup software {
  behavior
  event
}

Table behavior {
  id varchar [pk]
  contract varchar [not null, note: 'The contract']
  features text [ref: > feature.id, note: 'BehaviorImplementsFeature -> feature']
}

Table event {
  id varchar [pk]
}

// ── @specforge/product ──

TableGroup product {
  feature
  journey
}

Table feature {
  id varchar [pk]
}

Table journey {
  id varchar [pk]
}

// ── Relationships ──

Ref BehaviorImplementsFeature: behavior.features <> feature.id
Ref Triggers: behavior.id <> event.id
Ref JourneyExercisesFeature: journey.id <> feature.id
