crates/specforge-emitter/tests/snapshots/tests__model__render_dot_empty.snap
---
source: crates/specforge-emitter/tests/model.rs
expression: output
---
digraph model {
  rankdir=LR;
  node [shape=none, fontname="Helvetica"];
  edge [fontname="Helvetica", fontsize=10];
}
