crates/specforge-emitter/tests/snapshots/tests__model__render_dot_keys_grouped.snap
---
source: crates/specforge-emitter/tests/model.rs
assertion_line: 897
expression: output
---
digraph model {
  rankdir=LR;
  node [shape=none, fontname="Helvetica"];
  edge [fontname="Helvetica", fontsize=10];

  subgraph cluster_software {
    label="@specforge/software";
    style=dashed;
    color="#4a90d9";

    behavior [label=<
      <table border="1" cellborder="0" cellspacing="0">
        <tr><td bgcolor="#4a90d9" colspan="5"><font color="white"><b>behavior</b></font></td></tr>
        <tr><td align="left"><b>id</b></td><td>string</td><td>PK</td><td></td><td></td></tr>
        <tr><td align="left"><b>contract</b></td><td>string</td><td></td><td></td><td></td></tr>
        <tr><td align="left">features</td><td>reference_list</td><td>-&gt; feature</td><td><i>BehaviorImplementsFeature -&gt; feature</i></td><td></td></tr>
      </table>
    >];

    event [label=<
      <table border="1" cellborder="0" cellspacing="0">
        <tr><td bgcolor="#4a90d9" colspan="3"><font color="white"><b>event</b></font></td></tr>
        <tr><td align="left"><b>id</b></td><td>string</td><td>PK</td></tr>
      </table>
    >];
  }

  subgraph cluster_product {
    label="@specforge/product";
    style=dashed;
    color="#2ecc71";

    feature [label=<
      <table border="1" cellborder="0" cellspacing="0">
        <tr><td bgcolor="#2ecc71" colspan="3"><font color="white"><b>feature</b></font></td></tr>
        <tr><td align="left"><b>id</b></td><td>string</td><td>PK</td></tr>
      </table>
    >];

    journey [label=<
      <table border="1" cellborder="0" cellspacing="0">
        <tr><td bgcolor="#2ecc71" colspan="3"><font color="white"><b>journey</b></font></td></tr>
        <tr><td align="left"><b>id</b></td><td>string</td><td>PK</td></tr>
      </table>
    >];
  }
  behavior -> feature [label="BehaviorImplementsFeature\n[N:M]"];
  behavior -> event [label="Triggers\n[N:M]"];
  journey -> feature [label="JourneyExercisesFeature\n[N:M]"];
}
