crates/specforge-emitter/tests/snapshots/tests__model__render_json_empty.snap
---
source: crates/specforge-emitter/tests/model.rs
expression: output
---
{
  "model_version": "1.0.0",
  "extensions": [],
  "entities": [],
  "relationships": []
}
