crates/specforge-emitter/tests/snapshots/tests__model__render_markdown_empty.snap
---
source: crates/specforge-emitter/tests/model.rs
expression: output
---
# Logical Data Model

## How to read this model

This document describes the **schema** of a SpecForge project — the entity kinds
(analogous to database tables), their fields (columns), and the relationships
(foreign keys) between them. It does NOT show actual entity instances. Entity
kinds and fields are declared by SpecForge extensions. Relationships have
cardinality: 1:1 (one-to-one), 1:N (one-to-many), N:1 (many-to-one), or
N:M (many-to-many).

0 entity kinds, 0 edge types across 0 extensions.
