crates/specforge-emitter/tests/snapshots/tests__model__render_mermaid_keys_grouped.snap
---
source: crates/specforge-emitter/tests/model.rs
expression: output
---
erDiagram

    %% @specforge/software

    behavior {
        string id PK
        string contract "The contract"
        reference_list features FK "BehaviorImplementsFeature -> feature"
    }
    event {
        string id PK
    }

    %% @specforge/product

    feature {
        string id PK
    }
    journey {
        string id PK
    }

    %% Relationships

    behavior }o--o{ feature : "BehaviorImplementsFeature"
    behavior }o--o{ event : "Triggers"
    journey }o--o{ feature : "JourneyExercisesFeature"
